Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24913

Qt 5 does not work on platforms without XCB.

XMLWordPrintable

      Qt 5 only has an XCB platform plugin. There was an xlib plugin, but as it was unmaintained and had issues, it was removed in I090a9a0e6d2f893c030574e23f1d59f610282bd3.

      This bug is left open as a placeholder should anyone wish to take up ownership.

        For Gerrit Dashboard: QTBUG-24913
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            w00t Robin Burchell
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes