Remove xlib plugin.

There's not much point having this with the xcb plugin being present, and xlib
is pretty much unmaintained / broken anyway.

Task-number: QTBUG-24913
Change-Id: I090a9a0e6d2f893c030574e23f1d59f610282bd3
Reviewed-by: Thorbjørn Lund Martsum <tmartsum@gmail.com>
Reviewed-by: Rick Stockton <rickstockton@reno-computerhelp.com>
Reviewed-by: Samuel Rødal <samuel.rodal@nokia.com>

cregit: e6a7a6a381c0b61a93a642b425ecbcd714fd1c29 https://github.com/qt/qtbase/commit/e6a7a6a381c0b61a93a642b425ecbcd714fd1c29