src/plugins/platforms/xlib/qxlibcursor.cpp
@@ -1,4 +1,0 @@
-DECL|function|QXlibCursor
-DECL|function|changeCursor
-DECL|function|createCursorBitmap
-DECL|function|createCursorShape
