src/plugins/platforms/xlib/qxlibdisplay.cpp
@@ -1,6 +1,0 @@
-DECL|function|QXlibDisplay
-DECL|function|displayName
-DECL|function|flush
-DECL|function|nativeDisplay
-DECL|function|sync
-DECL|function|~QXlibDisplay
